--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.0",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.8",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
@@ -20,6 +24,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.19.0",
     "react-toastify": "^9.1.3",
+    "styled-components": "^6.1.1",
     "swiper": "^11.0.5",
     "yup": "^1.3.2"
   },
